--- a/requirements.txt
+++ b/requirements.txt
@@ -1,131 +1,75 @@
-# This file may be used to create an environment using:
-# $ conda create --name <env> --file <this file>
-# platform: osx-64
-absl-py=2.0.0=pypi_0
-addict=2.4.0=pypi_0
-basicsr=1.4.2=pypi_0
-blas=1.0=mkl
-brotli-python=1.0.9=py311hcec6c5f_7
-bzip2=1.0.8=h1de35cc_0
-ca-certificates=2023.08.22=hecd8cb5_0
-cachetools=5.3.2=pypi_0
-certifi=2023.11.17=py311hecd8cb5_0
-cffi=1.16.0=py311h6c40b1e_0
-charset-normalizer=2.0.4=pyhd3eb1b0_0
-contourpy=1.2.0=pypi_0
-cryptography=41.0.3=py311h30e54ef_0
-cycler=0.12.1=pypi_0
-facexlib=0.3.0=pypi_0
-ffmpeg=4.3=h0a44026_0
-filelock=3.13.1=py311hecd8cb5_0
-filterpy=1.4.5=pypi_0
-fonttools=4.46.0=pypi_0
-freetype=2.12.1=hd8bbffd_0
-fsspec=2023.10.0=pypi_0
-future=0.18.3=pypi_0
-gettext=0.21.0=he85b6c0_1
-gfpgan=1.3.8=pypi_0
-giflib=5.2.1=h6c40b1e_3
-gmp=6.2.1=he9d5cce_3
-gmpy2=2.1.2=py311h1c2e9e1_0
-gnutls=3.6.15=hed9c0bf_0
-google-auth=2.24.0=pypi_0
-google-auth-oauthlib=1.1.0=pypi_0
-grpcio=1.59.3=pypi_0
-icu=73.1=hcec6c5f_0
-idna=3.4=py311hecd8cb5_0
-imageio=2.33.0=pypi_0
-importlib-metadata=6.9.0=pypi_0
-intel-openmp=2023.1.0=ha357a0b_43548
-jinja2=3.1.2=py311hecd8cb5_0
-jpeg=9e=h6c40b1e_1
-kiwisolver=1.4.5=pypi_0
-lame=3.100=h1de35cc_0
-lazy-loader=0.3=pypi_0
-lcms2=2.12=hf1fd2bf_0
-lerc=3.0=he9d5cce_0
-libcxx=14.0.6=h9765a3e_0
-libdeflate=1.17=hb664fd8_1
-libffi=3.4.4=hecd8cb5_0
-libiconv=1.16=hca72f7f_2
-libidn2=2.3.4=h6c40b1e_0
-libjpeg-turbo=2.0.0=hca72f7f_0
-libpng=1.6.39=h6c40b1e_0
-libtasn1=4.19.0=h6c40b1e_0
-libtiff=4.5.1=hcec6c5f_0
-libunistring=0.9.10=h9ed2024_0
-libwebp=1.3.2=hf6ce154_0
-libwebp-base=1.3.2=h6c40b1e_0
-libxml2=2.10.4=h1bd7e62_1
-llvm-openmp=14.0.6=h0dcd299_0
-llvmlite=0.41.1=pypi_0
-lmdb=1.4.1=pypi_0
-lz4-c=1.9.4=hcec6c5f_0
-markdown=3.5.1=pypi_0
-markupsafe=2.1.1=py311h6c40b1e_0
-matplotlib=3.8.2=pypi_0
-mkl=2023.1.0=h8e150cf_43560
-mkl-service=2.4.0=py311h6c40b1e_1
-mkl_fft=1.3.8=py311h6c40b1e_0
-mkl_random=1.2.4=py311ha357a0b_0
-mpc=1.1.0=h6ef4df4_1
-mpfr=4.0.2=h9066e36_1
-mpmath=1.3.0=py311hecd8cb5_0
-ncurses=6.4=hcec6c5f_0
-nettle=3.7.3=h230ac6f_1
-networkx=3.1=py311hecd8cb5_0
-numba=0.58.1=pypi_0
-numpy=1.26.2=py311h728a8a3_0
-numpy-base=1.26.2=py311h53bf9ac_0
-oauthlib=3.2.2=pypi_0
-opencv-python=4.8.1.78=pypi_0
-openh264=2.1.1=h8346a28_0
-openjpeg=2.4.0=h66ea3da_0
-openssl=3.0.12=hca72f7f_0
-packaging=23.2=pypi_0
-pillow=10.0.1=py311h7d39338_0
-pip=23.3.1=py311hecd8cb5_0
-platformdirs=4.0.0=pypi_0
-protobuf=4.25.1=pypi_0
-pyasn1=0.5.1=pypi_0
-pyasn1-modules=0.3.0=pypi_0
-pycparser=2.21=pyhd3eb1b0_0
-pyopenssl=23.2.0=py311hecd8cb5_0
-pyparsing=3.1.1=pypi_0
-pysocks=1.7.1=py311hecd8cb5_0
-python=3.11.5=hf27a42d_0
-python-dateutil=2.8.2=pypi_0
-pytorch=2.1.1=py3.11_0
-pyyaml=6.0.1=py311h6c40b1e_0
-readline=8.2=hca72f7f_0
-realesrgan=0.3.0=dev_0
-requests=2.31.0=py311hecd8cb5_0
-requests-oauthlib=1.3.1=pypi_0
-rsa=4.9=pypi_0
-scikit-image=0.22.0=pypi_0
-scipy=1.11.4=pypi_0
-setuptools=68.0.0=py311hecd8cb5_0
-six=1.16.0=pypi_0
-sqlite=3.41.2=h6c40b1e_0
-sympy=1.12=py311hecd8cb5_0
-tb-nightly=2.16.0a20231202=pypi_0
-tbb=2021.8.0=ha357a0b_0
-tensorboard-data-server=0.7.2=pypi_0
-tf-keras-nightly=2.16.0.dev2023120210=pypi_0
-tifffile=2023.9.26=pypi_0
-tk=8.6.12=h5d9f67b_0
-tomli=2.0.1=pypi_0
-torchaudio=2.1.1=py311_cpu
-torchvision=0.16.1=py311_cpu
-tqdm=4.66.1=pypi_0
-typing_extensions=4.7.1=py311hecd8cb5_0
-tzdata=2023c=h04d1e81_0
-urllib3=1.26.18=py311hecd8cb5_0
-werkzeug=3.0.1=pypi_0
-wheel=0.41.2=py311hecd8cb5_0
-xz=5.4.2=h6c40b1e_0
-yaml=0.2.5=haf1e3a3_0
-yapf=0.40.2=pypi_0
-zipp=3.17.0=pypi_0
-zlib=1.2.13=h4dc903c_0
-zstd=1.5.5=hc035e20_0
+absl-py==2.0.0
+addict==2.4.0
+basicsr==1.4.2
+Brotli @ file:///Users/ec2-user/ci_py311/brotli-split_1678379922007/work
+cachetools==5.3.2
+certifi @ file:///private/var/folders/sy/f16zz6x50xz3113nwtb9bvq00000gp/T/abs_3cotsv2wp9/croot/certifi_1700501675943/work/certifi
+cffi @ file:///private/var/folders/sy/f16zz6x50xz3113nwtb9bvq00000gp/T/abs_44mvycfmuf/croot/cffi_1700254431144/work
+charset-normalizer @ file:///tmp/build/80754af9/charset-normalizer_1630003229654/work
+contourpy==1.2.0
+cryptography @ file:///private/var/folders/sy/f16zz6x50xz3113nwtb9bvq00000gp/T/abs_19sc_35nzq/croot/cryptography_1694211574676/work
+cycler==0.12.1
+facexlib==0.3.0
+filelock @ file:///private/var/folders/sy/f16zz6x50xz3113nwtb9bvq00000gp/T/abs_cd61an5em3/croot/filelock_1700591192468/work
+filterpy==1.4.5
+fonttools==4.46.0
+fsspec==2023.10.0
+future==0.18.3
+gfpgan==1.3.8
+gmpy2 @ file:///Users/ec2-user/ci_py311/gmpy2_1678380831980/work
+google-auth==2.24.0
+google-auth-oauthlib==1.1.0
+grpcio==1.59.3
+idna @ file:///Users/ec2-user/ci_py311/idna_1678315819133/work
+imageio==2.33.0
+importlib-metadata==6.9.0
+Jinja2 @ file:///Users/ec2-user/ci_py311/jinja2_1678317138271/work
+kiwisolver==1.4.5
+lazy_loader==0.3
+llvmlite==0.41.1
+lmdb==1.4.1
+Markdown==3.5.1
+MarkupSafe @ file:///Users/ec2-user/ci_py311/markupsafe_1678316973889/work
+matplotlib==3.8.2
+mkl-fft @ file:///private/var/folders/c_/qfmhj66j0tn016nkx_th4hxm0000gp/T/abs_af8wl3mjfu/croot/mkl_fft_1695058185839/work
+mkl-random @ file:///private/var/folders/c_/qfmhj66j0tn016nkx_th4hxm0000gp/T/abs_0fq2s894lk/croot/mkl_random_1695059822529/work
+mkl-service==2.4.0
+mpmath @ file:///private/var/folders/c_/qfmhj66j0tn016nkx_th4hxm0000gp/T/abs_8fyoqwupl2/croot/mpmath_1690848275746/work
+networkx @ file:///private/var/folders/sy/f16zz6x50xz3113nwtb9bvq00000gp/T/abs_666p3uavvu/croot/networkx_1690562005807/work
+numba==0.58.1
+numpy @ file:///private/var/folders/c_/qfmhj66j0tn016nkx_th4hxm0000gp/T/abs_dfryapvjbb/croot/numpy_and_numpy_base_1701362404676/work/dist/numpy-1.26.2-cp311-cp311-macosx_10_9_x86_64.whl#sha256=6c2ae94ce06eb50cf62ae1c3b73f0043bd2835c0fb8b943db65db727cd92c4b6
+oauthlib==3.2.2
+opencv-python==4.8.1.78
+packaging==23.2
+Pillow @ file:///private/var/folders/c_/qfmhj66j0tn016nkx_th4hxm0000gp/T/abs_18z8l26k8d/croot/pillow_1696580044342/work
+platformdirs==4.0.0
+protobuf==4.25.1
+pyasn1==0.5.1
+pyasn1-modules==0.3.0
+pycparser @ file:///tmp/build/80754af9/pycparser_1636541352034/work
+pyOpenSSL @ file:///private/var/folders/c_/qfmhj66j0tn016nkx_th4hxm0000gp/T/abs_7fwdg30481/croot/pyopenssl_1690223429070/work
+pyparsing==3.1.1
+PySocks @ file:///Users/ec2-user/ci_py311/pysocks_1678315868424/work
+python-dateutil==2.8.2
+PyYAML @ file:///private/var/folders/sy/f16zz6x50xz3113nwtb9bvq00000gp/T/abs_37cfd0k_yi/croot/pyyaml_1698096054183/work
+requests @ file:///private/var/folders/c_/qfmhj66j0tn016nkx_th4hxm0000gp/T/abs_fa2zrx4csg/croot/requests_1690400223595/work
+requests-oauthlib==1.3.1
+rsa==4.9
+scikit-image==0.22.0
+scipy==1.11.4
+six==1.16.0
+sympy @ file:///private/var/folders/sy/f16zz6x50xz3113nwtb9bvq00000gp/T/abs_94zd__m8ro/croot/sympy_1701397645431/work
+tb-nightly==2.16.0a20231202
+tensorboard-data-server==0.7.2
+tf-keras-nightly==2.16.0.dev2023120210
+tifffile==2023.9.26
+tomli==2.0.1
+torch==2.1.1
+torchaudio==2.1.1
+torchvision==0.16.1
+tqdm==4.66.1
+typing_extensions @ file:///private/var/folders/sy/f16zz6x50xz3113nwtb9bvq00000gp/T/abs_35a9251r5y/croot/typing_extensions_1690297487409/work
+urllib3 @ file:///private/var/folders/sy/f16zz6x50xz3113nwtb9bvq00000gp/T/abs_62orwr3pr2/croot/urllib3_1698257564351/work
+Werkzeug==3.0.1
+yapf==0.40.2
+zipp==3.17.0
